--- a/style.css
+++ b/style.css
@@ -21,3 +21,19 @@ body{
     background-size: contain;
 grid-template-columns: 50% 50%;
 }
+
+.container{
+    height: 100vh;
+
+}
+.container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px ;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+}
+
+.botao_secundario {
+    border:2px solid var(--branco-principal);
+}
