--- a/style.css
+++ b/style.css
@@ -1,58 +1,130 @@
 :root{
-    --branco-principal: #FFFFFF; 
-    --cinza-secundario: #C0C0C0; 
-    --botao-azul: #167BF7; 
-    --cor-de-fundo: #00030C; 
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
 body{
     background-color: var(--cor-de-fundo);
-    color:var(--branco-principal);
+    color: var(--branco-principal);
+    font-family: var(--font-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 *{
     margin: 0;
-    padding:0;
+    padding: 0;
 }
 
 .principal{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
-    background-size: contain;
-grid-template-columns: 50% 50%;
+    background-size: contain ;
+    align-items: center;
+    text-align: center;
 }
 
 .container{
     height: 100vh;
-
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
+
 .container__botao {
     background-color: var(--botao-azul);
-    border-radius: 5px ;
+    border-radius:5px ;
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
+    margin-bottom:1em
 }
 
 .botao_secundario {
-    border:2px solid var(--branco-principal);
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
 }
 
-
-.container__aviso{
+.container__aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
 }
 
-.container__titulo{
-    font-size:28px;
-    font-weight:700;
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
 }
 
-.container__imagem{
-    margin:1em 0 2em 0;
+.container__imagem {
+    margin: 1em 0 2em 0;
 }
 
-.container__caixa{
-    margin:0 6em;
+.container__caixa {
+    margin: 0 6em;
 }
+
+.secundario__imagem{
+    width: 80%
+}
+
+.secundario{
+    align-items:center;
+    margin:0 10em;
+}
+
+.descricao_titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descicao__texto{
+    color: var(--cinza-eundaio)
+}
+
+.secundaio_botao{
+    display:inline-block;
+    margin-top: 1em;
+}
+
+.container__descriao{
+    padding: 2em;
+}
+
+.dispositivos_lista{
+    display:flex;
+    justify-content: center;
+    list-style-type:none;
+    margin: 5em 0;
+}
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivos_titulo{
+   font-size: 48px;
+   color: var(--branco-principal);
+}
+
+.lista_iten{
+    font-size: 32px;
+    color:var(--branco-principal);
+}
+
+.rodape{
+    text-align: center;
+    margin:5em 3em;
+}
+
+.rodape_lista{
+    display:flex;
+    justify-content: center;
+    list-style-type:
+}
+   
