--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
-    --fonte-principal: 'inter';
+    --fonte-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
 }
 
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
-    font-family: var(--font-principal);
+    font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
 }
@@ -41,7 +41,7 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
-    margin-bottom:1em
+    margin-bottom: 1em;
 }
 
 .botao_secundario {
@@ -67,64 +67,89 @@ body{
     margin: 0 6em;
 }
 
-.secundario__imagem{
-    width: 80%
+.secundario__imagem {
+    width: 80%;
 }
 
-.secundario{
-    align-items:center;
-    margin:0 10em;
+.secundario {
+align-items: center;
+margin: 0 10em;
 }
 
-.descricao_titulo{
+.descricao__titulo {
     font-weight: 700;
     font-size: 48px;
     color: var(--branco-principal);
     margin-bottom: 0.1em;
 }
 
-.descicao__texto{
-    color: var(--cinza-eundaio)
+.descricao__texto {
+    color: var(--cinza-secundario);
 }
 
-.secundaio_botao{
-    display:inline-block;
+.secundario__botao {
+    display: inline-block;
     margin-top: 1em;
 }
 
-.container__descriao{
+.container__descricao {
     padding: 2em;
 }
 
-.dispositivos_lista{
-    display:flex;
+.dispositivos__lista {
+    display: flex;
     justify-content: center;
-    list-style-type:none;
+    list-style-type: none;
     margin: 5em 0;
 }
 
-.dispositivos{
+.dispositivos {
     text-align: center;
 }
 
-.dispositivos_titulo{
-   font-size: 48px;
-   color: var(--branco-principal);
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
 }
 
-.lista_iten{
+.lista__item {
     font-size: 32px;
-    color:var(--branco-principal);
+    color: var(--branco-principal);
 }
 
-.rodape{
+.rodape {
     text-align: center;
-    margin:5em 3em;
+    margin: 5em 3em;
 }
 
-.rodape_lista{
-    display:flex;
+.rodape__lista {
+    display: flex;
     justify-content: center;
-    list-style-type:
+    list-style-type: none;
+    margin-top: 1em;
 }
-   
+
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
+}
+
+.rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
